--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URL_TEST= mongodb+srv://valentinacg2910:zanahoria12-@prueba.euekgcb.mongodb.net/user-schedule-tabla?retryWrites=true&w=majority&appName=prueba
+MONGO_URL_PROD= mongodb+srv://valentinacg2910:zanahoria12-@prueba.euekgcb.mongodb.net/user-schedule-prod?retryWrites=true&w=majority&appName=prueba
 ACCES_TOKEN_SECRET = zanahoria1212
 EMAIL_PASS = enfd obre kfbo taix
 EMAIL_USER = valentinacg2910@gmail.com
